Upgrade to BCEL 6.2