@@ -1,9 +1,10 @@
 /*
- * Copyright  2000-2004 The Apache Software Foundation
- *
- *  Licensed under the Apache License, Version 2.0 (the "License"); 
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
@@ -11,36 +12,35 @@
  *  distributed under the License is distributed on an "AS IS" BASIS,
  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  *  See the License for the specific language governing permissions and
- *  limitations under the License. 
+ *  limitations under the License.
  *
  */
 package org.apache.bcel.generic;
 
-/** 
+/**
  * ICONST - Push value between -1, ..., 5, other values cause an exception
  *
  * <PRE>Stack: ... -&gt; ..., </PRE>
  *
- * @version $Id: ICONST.java 386056 2006-03-15 11:31:56Z tcurdt $
- * @author  <A HREF="mailto:m.dahm@gmx.de">M. Dahm</A>
+ * @version $Id: ICONST.java 1812166 2017-10-13 23:48:11Z ggregory $
  */
-public class ICONST extends Instruction implements ConstantPushInstruction, TypedInstruction {
+public class ICONST extends Instruction implements ConstantPushInstruction {
 
     private int value;
 
 
     /**
-     * Empty constructor needed for the Class.newInstance() statement in
-     * Instruction.readInstruction(). Not to be used otherwise.
+     * Empty constructor needed for Instruction.readInstruction.
+     * Not to be used otherwise.
      */
     ICONST() {
     }
 
 
-    public ICONST(int i) {
-        super(org.apache.bcel.Constants.ICONST_0, (short) 1);
+    public ICONST(final int i) {
+        super(org.apache.bcel.Const.ICONST_0, (short) 1);
         if ((i >= -1) && (i <= 5)) {
-            opcode = (short) (org.apache.bcel.Constants.ICONST_0 + i); // Even works for i == -1
+            super.setOpcode((short) (org.apache.bcel.Const.ICONST_0 + i)); // Even works for i == -1
         } else {
             throw new ClassGenException("ICONST can be used only for value between -1 and 5: " + i);
         }
@@ -48,14 +48,16 @@ public class ICONST extends Instruction implements ConstantPushInstruction, Type
     }
 
 
+    @Override
     public Number getValue() {
-        return new Integer(value);
+        return Integer.valueOf(value);
     }
 
 
     /** @return Type.INT
      */
-    public Type getType( ConstantPoolGen cp ) {
+    @Override
+    public Type getType( final ConstantPoolGen cp ) {
         return Type.INT;
     }
 
@@ -68,7 +70,8 @@ public class ICONST extends Instruction implements ConstantPushInstruction, Type
      *
      * @param v Visitor object
      */
-    public void accept( Visitor v ) {
+    @Override
+    public void accept( final Visitor v ) {
         v.visitPushInstruction(this);
         v.visitStackProducer(this);
         v.visitTypedInstruction(this);
