@@ -1,9 +1,10 @@
 /*
- * Copyright  2000-2004 The Apache Software Foundation
- *
- *  Licensed under the Apache License, Version 2.0 (the "License"); 
- *  you may not use this file except in compliance with the License.
- *  You may obtain a copy of the License at
+ * Licensed to the Apache Software Foundation (ASF) under one or more
+ * contributor license agreements.  See the NOTICE file distributed with
+ * this work for additional information regarding copyright ownership.
+ * The ASF licenses this file to You under the Apache License, Version 2.0
+ * (the "License"); you may not use this file except in compliance with
+ * the License.  You may obtain a copy of the License at
  *
  *      http://www.apache.org/licenses/LICENSE-2.0
  *
@@ -11,38 +12,37 @@
  *  distributed under the License is distributed on an "AS IS" BASIS,
  *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  *  See the License for the specific language governing permissions and
- *  limitations under the License. 
+ *  limitations under the License.
  *
  */
 package org.apache.bcel.generic;
 
-/** 
+/**
  * LCONST - Push 0 or 1, other values cause an exception
  *
  * <PRE>Stack: ... -&gt; ..., </PRE>
  *
- * @version $Id: LCONST.java 386056 2006-03-15 11:31:56Z tcurdt $
- * @author  <A HREF="mailto:m.dahm@gmx.de">M. Dahm</A>
+ * @version $Id: LCONST.java 1812166 2017-10-13 23:48:11Z ggregory $
  */
-public class LCONST extends Instruction implements ConstantPushInstruction, TypedInstruction {
+public class LCONST extends Instruction implements ConstantPushInstruction {
 
     private long value;
 
 
     /**
-     * Empty constructor needed for the Class.newInstance() statement in
-     * Instruction.readInstruction(). Not to be used otherwise.
+     * Empty constructor needed for Instruction.readInstruction.
+     * Not to be used otherwise.
      */
     LCONST() {
     }
 
 
-    public LCONST(long l) {
-        super(org.apache.bcel.Constants.LCONST_0, (short) 1);
+    public LCONST(final long l) {
+        super(org.apache.bcel.Const.LCONST_0, (short) 1);
         if (l == 0) {
-            opcode = org.apache.bcel.Constants.LCONST_0;
+            super.setOpcode(org.apache.bcel.Const.LCONST_0);
         } else if (l == 1) {
-            opcode = org.apache.bcel.Constants.LCONST_1;
+            super.setOpcode(org.apache.bcel.Const.LCONST_1);
         } else {
             throw new ClassGenException("LCONST can be used only for 0 and 1: " + l);
         }
@@ -50,14 +50,16 @@ public class LCONST extends Instruction implements ConstantPushInstruction, Type
     }
 
 
+    @Override
     public Number getValue() {
-        return new Long(value);
+        return Long.valueOf(value);
     }
 
 
     /** @return Type.LONG
      */
-    public Type getType( ConstantPoolGen cp ) {
+    @Override
+    public Type getType( final ConstantPoolGen cp ) {
         return Type.LONG;
     }
 
@@ -70,7 +72,8 @@ public class LCONST extends Instruction implements ConstantPushInstruction, Type
      *
      * @param v Visitor object
      */
-    public void accept( Visitor v ) {
+    @Override
+    public void accept( final Visitor v ) {
         v.visitPushInstruction(this);
         v.visitStackProducer(this);
         v.visitTypedInstruction(this);
